--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /day1/database/__pycache__
 /day1/models/__pycache__
 day1/sqlite3.db
+/day1/.venv
+/day1/__pycache__
+day1/.env
+day1/$(DATABASE_FILE)
