데이터 수정 api 수정
- api 수정
model_dump
session.add() 생략

- 데이터 베이스 수정
is_delete column 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-
 /day1/database/__pycache__
 /day1/models/__pycache__
-day1/sqlite3.db
+*.db
 /day1/.venv
 /day1/__pycache__
-day1/.env
+*.env
 day1/$(DATABASE_FILE)
+*.txt
